--- a/adult_section.html
+++ b/adult_section.html
@@ -43,7 +43,7 @@
     <!--Start Header	-->
     <header>
       <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light shadow">
           <div class="container-fluid">
             <a class="logos" href="#">
               <img src="images/logo -ikhwezi.png" alt="" />
@@ -115,7 +115,7 @@
           <div class="col-md-6">
             
             <div class="about-info">
-              <h3 class="heading">Ikhwezilokusa: Supportive Recovery for Adults</h3>
+              <h3 class="heading text-center">Ikhwezilokusa: Psychiatric Recovery for Adults</h3>
               <br/>
               <p class="lead">
                 Established in 2006, Ikhwezilokusa Psychiatric Home provides a safe and caring space for adults facing mental health challenges. We understand that everyone's experience is different, so we don't offer a one-size-fits-all approach. <br/>  Instead, our team works closely with residents to create personalized plans that focus on getting better, staying active, and getting the support they need.<br/><br/> We use a combination of skill-building activities, therapy, and care that's tailored to each person's situation. Our goal is to empower residents to reach their recovery goals and feel confident about rejoining their community.
