--- a/children_section.html
+++ b/children_section.html
@@ -43,7 +43,7 @@
     <!--Start Header	-->
     <header>
       <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light shadow">
           <div class="container-fluid">
             <a class="logos" href="#">
               <img src="images/logo -ikhwezi.png" alt="" />
@@ -115,7 +115,7 @@
           <div class="col-md-6">
             
             <div class="about-info">
-              <h3 class="heading">Nurturing Children</h3>
+              <h3 class="heading text-center">Nurturing Children</h3>
               <br/>
               <p class="lead">
                 In addition to our adult services, Ikhwezilokusa also provides a haven for children facing mental and severe disabilities. We understand the unique challenges these 26 children experience, and our dedicated team works tirelessly to provide them with 24-hour care tailored to their individual needs. This care encompasses a range of therapies, skill-building activities, and constant support to foster their development and well-being.  Beyond the 26 children residing here full-time, Ikhwezilokusa opens its doors to an additional 56 children daily who attend therapy sessions.  Our goal is to empower each child on their path to growth and equip them with the tools they need to thrive,  either within our care or as they transition back into their communities.
