--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!--Start Header	-->
     <header>
       <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light shadow">
           <div class="container-fluid">
             <a class="logos" href="/">
               <img src="images/logo -ikhwezi.png" alt="" />
@@ -174,7 +174,7 @@
               <h3>About Us</h3>
               <p class="lead">
                 Ikhwezilokusa Home was formed in 1994 in response to the dire
-                need to care and create a permanatly family environment for
+                need to care and create a permanently family environment for
                 children with special needs.
               </p>
               <p>
@@ -253,13 +253,10 @@
           </div>
           <div class="logoz">
             <div class="logos-slide">
-
               <img src="/images/gauteng-health_37_orig-removebg-preview.png" alt="Mental health" />
-
               <img src="/images/GDE-Logo_2019-removebg-preview.png" alt="GDE" />
-
+              <img src="/images/nlc-logo.png" alt="lotto">
               <img src="/images/food-forward.png" alt="Food Forward">
-
               <img src="/images/thusong.png" alt="Thusong">
             </div>
           </div>
