--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
     <!--Start Header	-->
     <header>
       <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light shadow">
           <div class="container-fluid">
             <a class="logos" href="/">
               <img src="images/logo -ikhwezi.png" alt="" />
