--- a/about.html
+++ b/about.html
@@ -173,7 +173,7 @@
               </li>
               <li>
                 <input type="radio" name="accordion " id="four">
-                <label for="four">How Your Contribution May Help</label>
+                <label for="four">How Your Support May Help</label>
                 <div class="corent">
                   <p>Your generous support allows us to provide a safe and nurturing environment for adults with intellectual disabilities.  We strive to empower each resident to reach their full potential and lead fulfilling lives.  With your help, we can continue to offer individualized care, skill development programs, and access to necessary resources.</p>
                 </div>
