--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light shadow">
           <div class="container-fluid">
-            <a class="logos" href="#">
+            <a class="logos" href="/">
               <img src="images/logo -ikhwezi.png" alt="" />
             </a>
             <button
@@ -78,7 +78,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/Daycare.html">DAYCARE</a>
                 </li>
-
+                <li class="nav-item">
+                  <a class="nav-link" href="/donate.html">Donations</a>
+                </li>
                  <li class="nav-item">
                   <a class="nav-link" href="/gallery.html">GALLERY</a>
                 </li>
