--- a/donate.html
+++ b/donate.html
@@ -5,7 +5,7 @@
     <!--For responsive		-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Ikhwezilokusa</title>
+    <title>Donations</title>
     <link
       rel="shortcut icon"
       href="/images/logo -ikhwezi.png"
@@ -43,7 +43,7 @@
     <!--Start Header	-->
     <header>
       <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light shadow">
           <div class="container-fluid">
             <a class="logos" href="/">
               <img src="images/logo -ikhwezi.png" alt="" />
@@ -83,7 +83,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/Daycare.html">DAYCARE</a>
                 </li>
-
+                <li class="nav-item">
+                  <a class="nav-link" href="/donate.html">Donations</a>
+                </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/gallery.html">GALLERY</a>
                 </li>
@@ -100,7 +102,32 @@
     <!--End Header	-->
 
     <main>
-      <section class="donate-section">
+      <section class="" id="team-section">
+        <div class="">
+          <div class="banner-container">
+            <div class="banzer">
+              <div class="giving">
+                <img
+                  src="/images/IMG-20240416-WA0005-removebg-preview.png"
+                  alt=""
+                />
+              </div>
+              <div class="conzent">
+                <h3>Every Gift. Every Hope.</h3>
+                <p>Your Support Matters.</p>
+              </div>
+              <div class="disab">
+                <img
+                  src="/images/IMG-20240416-WA0004-removebg-preview.png"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <hr/>
+      <section class="">
         <div class="section-overlay"></div>
         <div class="container">
           <div class="row">
@@ -111,42 +138,95 @@
                 method="get"
                 role="form"
               >
-                <h3 class="mb-4">Make a donation</h3>
+                <h2 class="mb-4 section-title text-center heading">
+                  Make a donation
+                </h2>
 
-                <p class="donation-info">
+                <p class="donation-info lead">
                   Your donation will directly support our mission to empower
                   individuals with disabilities. With your help, we can continue
                   to provide essential services, promote independence, and
                   create a more inclusive community where everyone can thrive.
                 </p>
-                <p class="donation-info">
+                <p class="donation-info lead">
                   We appreciate your generosity! All donations are
                   tax-deductible to the fullest extent of the law.
                 </p>
 
-                <h3>Support Us Directly:</h3>
-                <ul class="bank-details">
-                  <li>Bank Name: ABSA</li>
-                  <li>Account Name: IKHWEZILOKUSA PSYCHIATRIC HOME</li>
-                  <li>Account Number: 4076481222</li>
-                  <li>Account Type: Cheque Account</li>
-                  <li>Branch : MEYERTON</li>
+                <h3 class="text-center section-title heading">
+                  Support Us Directly:
+                </h3>
+                <ul class="contact-info">
+                  <span class="info-itemz d-flex align-items-center">
+                    <span class="material-icons">
+                      <span class="material-icons">
+                        <span class="material-icons"> account_balance </span>
+                      </span>
+                    </span>
+                    Bank Name: ABSA
+                  </span>
+                  <span class="info-itemz d-flex align-items-center">
+                    <span class="material-icons">
+                      <span class="material-icons">
+                        <span class="material-icons"> savings </span></span
+                      >
+                    </span>
+                    Account Name: IKHWEZILOKUSA PSYCHIATRIC HOME
+                  </span>
+                  <span class="info-itemz d-flex align-items-center">
+                    <span class="material-icons">
+                      <span class="material-icons">
+                        <span class="material-icons"> credit_card </span>
+                      </span>
+                    </span>
+                    Account Number: 4076481222
+                  </span>
+                  <span class="info-itemz d-flex align-items-center">
+                    <span class="material-icons">
+                      <span class="material-icons">
+                        <span class="material-icons"> verified_user </span>
+                      </span>
+                    </span>
+                    Account Type: Cheque Account
+                  </span>
+                  <span class="info-itemz d-flex align-items-center">
+                    <span class="material-icons">
+                      <span class="material-icons"> check_circle_outline </span>
+                    </span>
+                    Branch : MEYERTON
+                  </span>
                 </ul>
-                <div class="d-flex justify-content-center mt-4 py-5">
-                  <a
-                    href="./bankconfirmationletter.pdf"
-                    class="btn btn-primary me-2"
-                    download
-                  >
-                    <i class="bi bi-download"></i> Download Confirmation Letter
-                  </a>
-                </div>
               </form>
             </div>
           </div>
         </div>
       </section>
+      <hr />
+      <section class="about-section" id="about-section">
+        <div class="container">
+          <div class="row gx-5">
+            <div class="col-md-6">
+              <div class="about-info">
+                <h3 class="text-center heading">Donate. Build Hope 💝</h3>
+                <p class="lead">
+                  Your kind donation unlocks potential. It equips our caregivers
+                  with the resources to deliver exceptional care. These
+                  resources empower children & adults with disabilities to
+                  thrive through enriching programs and foster independence for
+                  a brighter future. Every contribution makes a difference, so
+                  join us in building hope, together.
+                </p>
+              </div>
+            </div>
 
+            <div class="col-md-6">
+              <div class="about-mediaz">
+                <img src="images/IMG-20240416-WA0003.jpg" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <footer class="footer-area">
         <div class="main">
           <div class="footerz">
