--- a/Daycare.html
+++ b/Daycare.html
@@ -62,7 +62,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/"
+                  <a
+                    class="nav-link active"
+                    aria-current="page"
+                    href="/"
                     >Home</a
                   >
                 </li>
@@ -71,9 +74,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="/adult_section.html"
-                    >Adult Section</a
-                  >
+                  <a class="nav-link" href="/adult_section.html">Adult Section</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/children_section.html"
@@ -83,8 +84,10 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/Daycare.html">DAYCARE</a>
                 </li>
-
                 <li class="nav-item">
+                  <a class="nav-link" href="/donate.html">Donations</a>
+                </li>
+                 <li class="nav-item">
                   <a class="nav-link" href="/gallery.html">GALLERY</a>
                 </li>
 
