--- a/contact-us.html
+++ b/contact-us.html
@@ -85,7 +85,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/"
+                  <a
+                    class="nav-link active"
+                    aria-current="page"
+                    href="/"
                     >Home</a
                   >
                 </li>
@@ -94,9 +97,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="/adult_section.html"
-                    >Adult Section</a
-                  >
+                  <a class="nav-link" href="/adult_section.html">Adult Section</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/children_section.html"
@@ -106,8 +107,10 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/Daycare.html">DAYCARE</a>
                 </li>
-
                 <li class="nav-item">
+                  <a class="nav-link" href="/donate.html">Donations</a>
+                </li>
+                 <li class="nav-item">
                   <a class="nav-link" href="/gallery.html">GALLERY</a>
                 </li>
 
@@ -149,20 +152,6 @@
           </div>
           <div class="container border mt-3 bg-light">
             <div class="row">
-              <div class="col-md-6 p-5 bg-primary text-white">
-                <div class="map-container blockzz">
-                  <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3569.7612007433677!2d27.929897076328118!3d-26.52780357723318!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e94ff78c5bd7131%3A0x7138de7e9a053150!2sMalherbe%20Rd%2C%20The%20De%20Deur%20Estates%2C%201884!5e0!3m2!1sen!2sza!4v1716122126871!5m2!1sen!2sza"
-                    width="500"
-                    height="450"
-                    style="border: 0"
-                    allowfullscreen=""
-                    loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"
-                  ></iframe>
-                </div>
-              </div>
-
               <div class="col-md-6 py-3">
                 <h1>Contact</h1>
                 <div class="form-group">
@@ -194,6 +183,19 @@
                 <button class="btn btn-primary" onclick="sendMail()">
                   Submit
                 </button>
+              </div>
+              <div class="col-md-6 p-5 bg-primary text-white">
+                <div class="map-container blockzz">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3569.7612007433677!2d27.929897076328118!3d-26.52780357723318!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e94ff78c5bd7131%3A0x7138de7e9a053150!2sMalherbe%20Rd%2C%20The%20De%20Deur%20Estates%2C%201884!5e0!3m2!1sen!2sza!4v1716122126871!5m2!1sen!2sza"
+                    width="500"
+                    height="450"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
+                </div>
               </div>
             </div>
           </div>
