--- a/gallery.html
+++ b/gallery.html
@@ -84,7 +84,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/Daycare.html">DAYCARE</a>
                 </li>
-
+                <li class="nav-item">
+                  <a class="nav-link" href="/donate.html">Donations</a>
+                </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/gallery.html">GALLERY</a>
                 </li>
