--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/Daycare.html">DAYCARE</a>
                 </li>
-
+                <li class="nav-item">
+                  <a class="nav-link" href="/donate.html">Donations</a>
+                </li>
                  <li class="nav-item">
                   <a class="nav-link" href="/gallery.html">GALLERY</a>
                 </li>
@@ -188,7 +190,7 @@
                 for 72 adult people.
               </p>
 
-              <a href="/about.html" class="btn btn-primary">Learn More</a>
+              <a href="/about.html" class="btn btn-primary">Read More</a>
             </div>
           </div>
         </div>
