--- a/adult_section.html
+++ b/adult_section.html
@@ -219,7 +219,7 @@
                 Meet Our Dedicated Team! Our caregivers are the heart of our disability home. They provide compassionate support with daily living activities, while also working to develop residents' skills and independence. They organize engaging activities to combat social isolation and offer a listening ear and emotional support, ensuring each resident feels valued and cared for.
                 <br/>
                 <br/>
-Our caring staff provides provides:
+Our caring staff provides:
               </p>
               <div class="contact-info">
                 <span class="info-itemz d-flex align-items-center">
