--- a/children_section.html
+++ b/children_section.html
@@ -203,7 +203,7 @@
 Meet Our Dedicated Childcare Experts! Our compassionate caregivers specialize in supporting children with disabilities. They create a nurturing environment that fosters independence, while providing exceptional care for each child's unique needs.
 <br/>
 <br/>
-Our caring staff provides provides
+Our caring staff provides:
               </p>
               <div class="contact-info">
                 <span class="info-itemz d-flex align-items-center">
