--- a/adult_section.html
+++ b/adult_section.html
@@ -363,7 +363,7 @@ check_circle_outline
 
           <div class="single-footer map-container"> <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3569.7612007433677!2d27.929897076328118!3d-26.52780357723318!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e94ff78c5bd7131%3A0x7138de7e9a053150!2sMalherbe%20Rd%2C%20The%20De%20Deur%20Estates%2C%201884!5e0!3m2!1sen!2sza!4v1716122126871!5m2!1sen!2sza"
-            width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+            style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         </div>
