--- a/contact-us.html
+++ b/contact-us.html
@@ -85,10 +85,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a
-                    class="nav-link active"
-                    aria-current="page"
-                    href="/"
+                  <a class="nav-link active" aria-current="page" href="/"
                     >Home</a
                   >
                 </li>
@@ -97,7 +94,9 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="/adult_section.html">Adult Section</a>
+                  <a class="nav-link" href="/adult_section.html"
+                    >Adult Section</a
+                  >
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/children_section.html"
@@ -110,7 +109,7 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/donate.html">Donations</a>
                 </li>
-                 <li class="nav-item">
+                <li class="nav-item">
                   <a class="nav-link" href="/gallery.html">GALLERY</a>
                 </li>
 
@@ -270,8 +269,6 @@
           <div class="single-footer map-container">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3569.7612007433677!2d27.929897076328118!3d-26.52780357723318!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e94ff78c5bd7131%3A0x7138de7e9a053150!2sMalherbe%20Rd%2C%20The%20De%20Deur%20Estates%2C%201884!5e0!3m2!1sen!2sza!4v1716122126871!5m2!1sen!2sza"
-              width="400"
-              height="200"
               style="border: 0"
               allowfullscreen=""
               loading="lazy"
