--- a/index.html
+++ b/index.html
@@ -180,14 +180,9 @@
                 children with special needs.
               </p>
               <p>
-                The Home cares for 26 severely and profound mental disabled
-                children on a 24-hour basis. These children are cared for and
-                stimulated by trained caregivers. There are also 56 children who
-                the home for therapy daily and provide for the children with
-                special educational needs. The psychiatric home was formed in
-                2006 in response to the need in the area for residential as well
-                as a rehabilition facility for psychiatric patients. It caters
-                for 72 adult people.
+                The Home provides 24-hour care for 26 children with severe and profound intellectual disabilities. Trained caregivers look after these children and provide them with stimulation. The Home also offers daily therapy sessions for an additional 56 children with special educational needs.
+                `                             <br/>
+                                          Founded in 2006 to address the area's need for a combined residential and rehabilitation facility for psychiatric patients, the psychiatric home caters to 72 adults.
               </p>
 
               <a href="/about.html" class="btn btn-primary">Read More</a>
